<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc4">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="ssl_certificate_error">SSL Certificate Error</string>
    <string name="phone_number">Phone Number:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="zimbabwe">Zimbabwe</string>
    <string name="gfaduku_gmail_com">gfaduku@gmail.com</string>
    <string name="gift_f">Gift F</string>
    <string name="android">Android</string>
    <string name="track">Track:</string>
    <string name="gift_paul_faduku">Gift Paul Faduku</string>
    <string name="ph263776111451">+263776111451</string>
    <string name="profile_photo_content_description">Gift Paul Faduku\'s profile photo</string>
</resources>
